# hyperliquid-rust-sdk

./: .gitignore  Cargo.toml  ENV_SETUP.md  README.md
.cursor/: architecture.mdc  engineer.mdc
docs/: Architecture.md
src/: helpers.rs  lib.rs  meta.rs
src/exchange/: actions.rs  builder.rs  exchange_client.rs  mod.rs  order.rs
src/info/: info_client.rs  mod.rs
src/unsigned/: bridge.rs  builder.rs  components.rs  mod.rs
