[package]
name = "hl_ranger"
version = "0.6.0-ranger.11"
edition = "2021"
license = "MIT"
description = "Fork of Hyperliquid Rust SDK with unsigned transaction support for external signing"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://docs.rs/hl_ranger"
repository = "https://github.com/ranger-finance/hyperliquid-rust-sdk"
keywords = ["hyperliquid", "trading", "defi", "cryptocurrency", "blockchain"]
categories = ["api-bindings", "finance"]

[[bin]]
name = "unsigned_transaction_example"
path = "src/bin/unsigned_transaction_example.rs"

[[bin]]
name = "signed_transaction_test"
path = "src/bin/signed_transaction_test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
futures-util = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.3"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.18"
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
rmp-serde = "1.0.0"
thiserror = "1.0.44"
tokio = {version = "1.29.1", features = ["full"]}
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
uuid = {version = "1.6.1", features = ["v4"]}
